# distrain

./: .dockerignore  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-node-gpu.yml  build-node.yml  build.yml  test.yml
coordinator/: Cargo.toml  Dockerfile  entrypoint.sh
coordinator/src/: aggregation.rs  main.rs  metrics.rs  peer_sync.rs  proxy_replay.rs  routes.rs  state.rs  stats.rs
core/model/: Cargo.toml
core/model/src/: checkpoint.rs  compression.rs  config.rs  importance.rs  lib.rs  lowrank.rs  model.rs  training.rs
core/shared/: Cargo.toml
core/shared/src/: config.rs  lib.rs  paths.rs  storage.rs  types.rs
core/shared/src/p2p/: cascade.rs  mod.rs  service.rs  types.rs
docker/: docker-compose.yml
docker/monitoring/: alerts.yml  prometheus.yml
docker/monitoring/grafana/dashboards/: distrain.json
docker/monitoring/grafana/provisioning/dashboards/: dashboards.yml
k8s/base/: coordinator.yaml  kustomization.yaml  minio.yaml  namespace.yaml
k8s/overlays/do/: kustomization.yaml
node/android/: build-rust.sh
node/android/app/src/main/java/com/distrain/node/: DistrainBridge.kt  TrainingService.kt
node/browser/wasm/: Cargo.toml
node/browser/wasm/src/: lib.rs
node/browser/web/: distrain-ui.css  distrain-ui.js  index.html  worker.js
node/cli/: Cargo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.runpod  cuda_compat.c  entrypoint.sh
node/cli/src/: client.rs  continuous.rs  data.rs  data_tests.rs  lib.rs  main.rs  peer_merge.rs  resources.rs  resume.rs  trainer.rs  trainer_tests.rs
node/desktop/frontend/: index.html  main.js  style.css
node/desktop/src-tauri/: Cargo.toml  tauri.conf.json
node/desktop/src-tauri/src/: commands.rs  main.rs
node/ffi/: Cargo.toml  distrain.h
node/ffi/src/: lib.rs
node/ios/: build-rust.sh  project.yml
node/ios/DistrainNode/: ContentView.swift  DistrainBridge.swift  DistrainNodeApp.swift  Info.plist  LossChartView.swift  TrainingManager.swift
node/ios/DistrainNode.xcodeproj/: project.pbxproj
node/ios/DistrainNode.xcodeproj/project.xcworkspace/xcuserdata/frane.xcuserdatad/: UserInterfaceState.xcuserstate
node/ios/DistrainNode.xcodeproj/xcshareddata/xcschemes/: DistrainNode.xcscheme
node/ui/: distrain-ui.html
scripts/: benchmark_compression.py  calibrate_device.py  chat.py  e2e_heterogeneous.py  export_hf.py  integration_test.py  integration_test.sh  merge_lora.py  prepare_data.py  run_ablation.sh  run_dpo.py  run_evals.py  run_sft.py  serve.py  simulate_continuous.py  wasm_node_headless.mjs
