[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distrain"
version = "0.1.0"
description = "Decentralized LLM training platform — Python scripts and tooling"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.20.0",
    "zstandard>=0.23.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
data = [
    "datasets>=2.18.0",
]
eval = [
    "lm-eval>=0.4.0",
    "matplotlib>=3.8.0",
]
alignment = [
    "datasets>=2.18.0",
    "accelerate>=0.27.0",
]
inference = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
export = [
    "transformers>=4.36.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "pyright>=1.1.380",
    "boto3>=1.35.0",
    "lm-eval>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
