[package]
name = "distrain-coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[features]
default = []
cuda = ["distrain-model/cuda", "dep:burn-cuda"]

[dependencies]
distrain-shared = { path = "../core/shared" }
distrain-model = { path = "../core/model" }
burn = { workspace = true }
burn-ndarray = { workspace = true }
burn-cuda = { version = "0.20", optional = true, default-features = false, features = ["std", "autotune"] }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
once_cell = "1"
