[package]
name = "distrain-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
