[package]
name = "distrain-node"
version = "0.1.0"
edition = "2021"

[lib]
name = "distrain_node"
path = "src/lib.rs"

[[bin]]
name = "distrain-node"
path = "src/main.rs"

[features]
default = []
cuda = ["distrain-model/cuda"]

[dependencies]
distrain-shared = { path = "../../core/shared", features = ["p2p"] }
distrain-model = { path = "../../core/model" }
burn = { workspace = true, features = ["autodiff"] }
burn-wgpu = { workspace = true, features = ["std", "autotune", "fusion"] }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
shellexpand = "3"
sysinfo = "0.33"
wgpu = { version = "26", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
zstd = { workspace = true }

[dev-dependencies]
tempfile = "3"
